--- a/style.css
+++ b/style.css
@@ -14,10 +14,13 @@
 }
 
 #board{
-    background: linear-gradient(rgb(170, 236, 170), rgb(236, 236, 167));
+    background: url("../bgimage.jpg");
+    background-repeat: 2;
+    background-size: contain;
+    justify-content: center;
     width: 90vmin;
     height: 92vmin;
-    border: 2px solid black;
+    border: 8px solid black;
     display: grid;
     grid-template-rows: repeat(18,1fr);
     grid-template-columns: repeat(18,1fr);
@@ -42,20 +45,22 @@
 }
 
 .head{
-    background: linear-gradient(red,orange);
-    border: 2px solid purple;
-    transform: scale(1.02);
-    border-radius: 9px;
+    background: url("../snakehead.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform: scale(1.5);
 }
 
 .snake{
-    background-color: purple;
-    border: .25vmin solid white;
-    border-radius: 12px;
+    background: url("../snakehead.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform: scale(1.02);
 }
 
 .food{
     background: linear-gradient(red,purple);
-    border: .25vmin solid black;
-    border-radius: 8 px;
+    transform: scale(0.5);
+    border: 0.25vmin solid black;
+    border-radius: 20px;
 }
