--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 .body{
-    background: url("../background.jpg");
+    background: url("background.jpg");
     min-height: 100vh;
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
@@ -14,7 +14,7 @@
 }
 
 #board{
-    background: url("../bgimage.jpg");
+    background: url("bgimage.jpg");
     background-repeat: 2;
     background-size: contain;
     justify-content: center;
@@ -45,14 +45,14 @@
 }
 
 .head{
-    background: url("../snakehead.png");
+    background: url("snakehead.png");
     background-repeat: no-repeat;
     background-size: contain;
     transform: scale(1.5);
 }
 
 .snake{
-    background: url("../snakehead.png");
+    background: url("snakehead.png");
     background-repeat: no-repeat;
     background-size: contain;
     transform: scale(1.02);
